# jupiter-delegate

./: .gitignore  Anchor.toml  Cargo.toml  codama.json  dflow_aggregator.json  package-lock.json  package.json  pnpm-lock.yaml  rust-toolchain.toml
clients/rust/: Cargo.toml
clients/rust/src/: lib.rs
programs/jupiter-delegate/: Cargo.toml
programs/jupiter-delegate/idls/: dflow_aggregator.json  jupiter_aggregator.json  jupiter_order_engine.json  jupiter_perpetuals.json  okx_aggregator.json
programs/jupiter-delegate/src/: constants.rs  error.rs  event.rs  lib.rs
programs/jupiter-delegate/src/instructions/: aggregator.rs  declare.rs  dflow.rs  fill_order_engine.rs  init_config.rs  jupiter.rs  jupiter_aggregator.rs  jupiter_perpetuals.rs  mod.rs  modify_config.rs  okx.rs  shared_accounts_route_v2.rs  swap.rs  utils.rs
programs/jupiter-delegate/src/instructions/admin/: mod.rs  modify_access.rs  modify_config.rs  transfer_admin.rs
programs/jupiter-delegate/src/instructions/aggregator/: dflow.rs  fill_order_engine.rs  jupiter.rs  mod.rs  okx.rs
programs/jupiter-delegate/src/instructions/jupiter/: swap.rs
programs/jupiter-delegate/src/instructions/perpetuals/: discriminator.rs  liquidity.rs  mod.rs  types.rs
programs/jupiter-delegate/src/instructions/simple/: mod.rs  token_receive.rs  transfer_in.rs  transfer_out.rs
programs/jupiter-delegate/src/instructions/two_hop/: mod.rs  types.rs
programs/jupiter-delegate/src/state/: access.rs  config.rs  mod.rs
tests/: jupiter-delegate.ts
tests/accounts/: jupiter.json  usdc.json  wsol.json
(+5 files in other folders)
