[package]
name = "jupiter-delegate-client-rust"
version = "0.1.0"
edition = "2021"

[lib]

[features]
default = []
serde = ["dep:serde"]

[dependencies]
solana-pubkey = { version = "3.0.0", features = ["borsh", "serde"] }
solana-instruction = "3.0.0"
solana-account-info = "3.0.0"
solana-program-error = "3.0.0"
solana-cpi = "3.0.0"
borsh = { version = "1.5.7", features = ["derive"] }
serde = { optional = true, version = "1.0.228", features = ["derive"] }
serde_with = { optional = true, version = "3.15.1" }
num-derive = "0.4.2"
num-traits = "0.2"
thiserror = "2.0.17"
